# pi-nocchio

./: .env.example  .gitignore  DEPLOY.md  IDEAS.md  README.md  pyproject.toml
config/: gpio_pins.yaml  tools.yaml
scripts/: enable-pwm-audio.sh  run.sh  setup-pi.sh
src/pinocchio/: __main__.py  config.py
src/pinocchio/agent/: llm.py  loop.py
src/pinocchio/hardware/: gpio.py
src/pinocchio/tools/: base.py  gpio_tools.py  registry.py  utility_tools.py  voice_tools.py
src/pinocchio/utils/: colors.py  logger.py
