[project]
name = "pinocchio"
version = "0.1.0"
description = "The 'I want to be a real boy' starter kit for LLMs built for Raspberry Pis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Harsh", email = "harsh@example.com" }
]

dependencies = [
    "openai>=1.0.0",           # OpenRouter client (OpenAI SDK)
    "pydantic>=2.0.0",         # Data validation
    "pydantic-settings>=2.0.0", # Settings from .env
    "python-dotenv>=1.0.0",    # Load .env files
    "pyyaml>=6.0.0",           # Parse config files
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",             # Linter/formatter
]

[project.scripts]
pinocchio = "pinocchio.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]  # Error, pyflakes, isort
